--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2,7 +2,42 @@
   author       = {Petr Peringer and Martin Hrubý},
   url          = {https://www.fit.vutbr.cz/study/courses/IMS/public/prednasky/IMS.pdf},
   howpublished = {[online]},
-  note         = {[vid. 2023-12-07]},
-  title        = {Modelovaní a simulace}
+  note         = {[vid. 2023-11-30]},
+  title        = {Modelovaní a simulace},
   year         = {2019}
+}
+
+@InProceedings{paper,
+author="Wang, Ruili
+and Liu, Mingzhe",
+editor="Sunderam, Vaidy S.
+and van Albada, Geert Dick
+and Sloot, Peter M. A.
+and Dongarra, Jack J.",
+title="A Realistic Cellular Automata Model to Simulate Traffic Flow at Urban Roundabouts",
+booktitle="Computational Science -- ICCS 2005",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="420--427",
+abstract="In this paper a realistic cellular automata model is proposed to simulate traffic flow at single-lane roundabouts. The proposed model is built on fine grid Cellular Automata (CA), so it is able to simulate actual traffic flow more realistically. Several important novel features are employed in our model. Firstly, 1.5-second rule is used for the headway (=distance /speed) in car-following process. Secondly, vehicles movement on urban streets are simulated based on the assumption of speed changes following a Gaussian (normal) distribution and is calibrated with the field data. Thirdly, driver behavior is modeled by using a truncated Gaussian distribution. Numerical results show that our method is feasible and valid.",
+isbn="978-3-540-32114-9",
+url={https://pdodds.w3.uvm.edu/teaching/courses/2009-08UVM-300/docs/others/2005/wang2005a.pdf}
+}
+
+@misc{inzenyrstvi,
+  author       = {Luděk Bartoš},
+  url          = {https://www.dopravniinzenyrstvi.cz/clanky/poznatky-z-vyzkumu-kapacity-vjezdu-do-okruzni-krizovatky/},
+  howpublished = {[online]},
+  note         = {[vid. 2023-11-30]},
+  title        = {Poznatky z výzkumu kapacity vjezdu do okružní křižovatky},
+  year         = {2019}
+}
+
+@misc{intro,
+  howpublished = {[online]},
+  note         = {[vid. 2023-11-30]},
+  title        = {INTRODUCTION TO ROUNDABOUTS},
+  year         = {2006},
+  url = {https://web.archive.org/web/20060221103353/http://www.rpi.edu/dept/cits/files/ops.ppt}
 }
